[package]
name = "upf"
version = "0.1.0"
authors = ["Jokler <jokler@protonmail.com>"]
repository = "https://github.com/jokler/upf"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["file-upload", "url-shortener", "share"]
categories = ["command-line-utilities", "web-programming::http-client"]
description = "An upload program to simplify using file sharing services"
edition = "2018"

[[bin]]
name = "upf"
doc = false

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.6"
serde_json = "1.0.48"
thiserror = "1.0.11"
structopt = "0.3.11"
reqwest = "0.10.4"
regex = "1.3.5"
tokio = { version = "0.2.13", features = ["rt-threaded", "macros"] }
atty = "0.2.14"
